--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -1,10 +1,13 @@
 {
   "general": {
+    "login": "anmelden",
+    "logout": "abmelden",
+    "username": "Benutzername",
+    "password": "Passwort",
     "back": "zurück",
     "loadMore": "mehr laden",
     "itemNotActivated": "Grafik ist noch nicht aktiviert",
     "saveChanges": "Änderungen speichern",
-    "logout": "abmelden",
     "close": "schliessen",
     "goToOverview": "zur Übersicht",
     "created": "erstellt",
