--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -36,7 +36,9 @@
     "deactivate": "deaktivieren",
     "blueprint": "als Vorlage benutzen",
     "blueprintTitlePrefix": "Kopie von ",
-    "edit": "edititieren"
+    "edit": "edititieren",
+    "failedToLoadItem": "Die Grafik konnte nicht geladen werden.",
+    "failedToBlueprintItem": "Die Grafik konnte nicht als Vorlage verwendet werden."
   },
   "itemsFilter": {
     "allGraphics": "alle Grafiken",
