--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -1,5 +1,6 @@
 {
   "general": {
+    "searchLabel": "Eine Grafik suchen",
     "login": "anmelden",
     "logout": "abmelden",
     "username": "Benutzername",
@@ -12,6 +13,7 @@
     "goToOverview": "zur Übersicht",
     "created": "erstellt",
     "by": "von",
+    "only": "nur",
     "graphic": "Grafik",
     "graphic_plural": "Grafiken",
     "browserSupportMessage": "Q ist für Chrome optimiert und funktioniert in Ihrem Browser evtl. nicht.",
@@ -36,13 +38,13 @@
     "deactivate": "deaktivieren",
     "blueprint": "als Vorlage benutzen",
     "blueprintTitlePrefix": "Kopie von ",
-    "edit": "edititieren",
+    "edit": "bearbeiten",
     "failedToLoadItem": "Die Grafik konnte nicht geladen werden.",
     "failedToBlueprintItem": "Die Grafik konnte nicht als Vorlage verwendet werden."
   },
   "itemsFilter": {
     "allGraphics": "alle Grafiken",
-    "fromEveryone": "von allen",
+    "byAll": "von allen",
     "byMe": "von mir",
     "allDepartments": "alle Ressorts",
     "myDepartment": "nur mein Ressorts",
