adds translation for yes no buttons in confirm-dialog

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -1,5 +1,7 @@
 {
   "general": {
+    "yes": "Ja",
+    "no": "Nein",
     "searchLabel": "Eine Grafik suchen",
     "login": "anmelden",
     "logout": "abmelden",
