Store selected items in array, rename cms to livingdocs

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -57,7 +57,7 @@
     "onlyActive": "nur Aktive",
     "onlyInactive": "nur Inaktive"
   },
-  "cmsComponent": {
+  "livingdocsComponent": {
     "insert": "einfügen",
     "edit": "in Q bearbeiten",
     "titleLabel": "Titel des Q Elements: ",
