--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -35,7 +35,8 @@
     "questionLeaveWithUnsavedChanges": "Not all changes are saved, close anyway?",
     "arrayEntryAdd": "add {{ arrayEntryLabel }}",
     "activatingEditorTakesTooLong": "It takes too long to load the editor, something is wrong.",
-    "failedToSave": "Failed to save: {{reason}}.",
+    "failedToSave": "Failed to save",
+    "conflictOnSave": "Failed to save due to a conflict",
     "failedToLoadEditorPart": "failed to load the editor for this element"
   },
   "item": {
@@ -63,5 +64,11 @@
     "titleLabel": "title Q element: ",
     "selectGraphic": "please select a Q element from the list",
     "searchLabel": "Search for a Q element"
+  },
+  "notifications": {
+    "failedLoadingEditorConfig": "Failed to load editor configuration",
+    "graphicNeedsATitle": "Graphic needs a title",
+    "failedLoadingItems": "Failed loading graphics",
+    "failedToLoadItem": "Failed to load the graphic."
   }
 }
