--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -66,6 +66,7 @@
     "searchLabel": "Search for a Q element"
   },
   "notifications": {
+    "previewBadRequest": "There is data missing to show the preview",
     "failedLoadingEditorConfig": "Failed to load editor configuration",
     "graphicNeedsATitle": "Graphic needs a title",
     "failedLoadingItems": "Failed loading graphics",
