fix: no autosave if item active, show message if so

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -37,7 +37,8 @@
     "activatingEditorTakesTooLong": "Es dauert zu lange den Editor zu laden, irgendwas ist schief gelaufen.",
     "failedToSave": "Speichern ist fehlgeschlagen",
     "conflictOnSave": "Speichern ist fehlgeschlagen weil ein Konflikt besteht",
-    "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden"
+    "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden",
+    "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist"
   },
   "item": {
     "activate": "aktivieren",
