--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -39,7 +39,8 @@
     "failedToSave": "Speichern ist fehlgeschlagen",
     "conflictOnSave": "Speichern ist fehlgeschlagen weil ein Konflikt besteht",
     "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden",
-    "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist"
+    "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist",
+    "toolNotAvailable": "Dieses Tool ist für dich nicht freigeschaltet"
   },
   "item": {
     "activate": "aktivieren",
@@ -71,7 +72,6 @@
     "failedLoadingEditorConfig": "Die Editorkonfiguration konnte nicht geladen werden",
     "graphicNeedsATitle": "Grafik braucht einen Titel",
     "failedLoadingItems": "Grafiken konnten nicht geladen werden",
-    "failedToLoadItem": "Die Grafik konnte nicht geladen werden.",
-    "toolNotAvailable": "Dieses Tool steht nicht zur Verfügung"
+    "failedToLoadItem": "Die Grafik konnte nicht geladen werden."
   }
 }
