feat: add publication filter to be configured by Q-server editor config.

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -55,6 +55,7 @@
     "byMe": "von mir",
     "allDepartments": "alle Ressorts",
     "myDepartment": "nur mein Ressort",
+    "allPublications": "alle Publikationen",
     "allStates": "alle Zustände",
     "onlyActive": "nur aktive",
     "onlyInactive": "nur inaktive"
