--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -56,6 +56,7 @@
     "byMe": "by me",
     "allDepartments": "all departments",
     "myDepartment": "my department only",
+    "allPublications": "all publications",
     "allStates": "all states",
     "onlyActive": "active only",
     "onlyInactive": "inactive only"
