--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -14,6 +14,7 @@
     "close": "schliessen",
     "goToOverview": "zur Übersicht",
     "created": "erstellt",
+    "edited": "bearbeitet",
     "by": "von",
     "only": "nur",
     "graphic": "Grafik",
