--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -14,6 +14,7 @@
     "close": "close",
     "goToOverview": "Overview",
     "created": "created",
+    "edited": "edited",
     "by": "by",
     "only": "only",
     "graphic": "graphic",
