use translations for meta-editor, fixes #66

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -42,6 +42,10 @@
     "failedToLoadEditorPart": "Der Editor für dieses Element konnte nicht geladen werden",
     "noAutosaveBecauseActive": "Automatisches speichern ist deaktiviert da die Grafik bereits aktiv ist"
   },
+  "metaEditor": {
+    "annotations": "Notizen",
+    "publication": "Publikation"
+  },
   "item": {
     "activate": "aktivieren",
     "deactivate": "deaktivieren",
