--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -79,6 +79,19 @@
     "graphicNeedsATitle": "Graphic needs a title",
     "failedLoadingItems": "Failed loading graphics",
     "failedToLoadItem": "Failed to load the graphic.",
-    "toolNotAvailable": "This tool is not available"
+    "toolNotAvailable": "This tool is not available",
+    "maxNumberOfFilesExceed": "You are not allowed to upload more files"
+  },
+  "dropzone": {
+    "dictDefaultMessage": "Drop files here to upload",
+    "dictFallbackMessage": "Your browser does not support drag'n'drop file uploads.",
+    "dictFallbackText": "Please use the fallback form below to upload your files like in the olden days.",
+    "dictFileTooBig": "File is too big ({{filesize}}MiB). Max filesize: {{maxFilesize}}MiB.",
+    "dictInvalidFileType": "You can't upload files of this type.",
+    "dictResponseError": "Server responded with {{statusCode}} code.",
+    "dictCancelUpload": "Cancel upload",
+    "dictCancelUploadConfirmation": "Are you sure you want to cancel this upload?",
+    "dictRemoveFile": "Remove file",
+    "dictMaxFilesExceeded": "You can not upload any more files."
   }
 }
