(schema-editor-files) fix translation typos

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -85,7 +85,7 @@
     "dictDefaultMessage": "Anklicken oder Bilder hierhin ziehen, um sie hochzuladen",
     "dictFallbackMessage": "Ihr Browser unterstützt Drag&Drop Dateiuploads nicht",
     "dictFallbackText": "Benutzen Sie das Formular um Ihre Dateien hochzuladen",
-    "dictFileTooBig": "Die Datei ist zu groß. Die maximale Dateigröße beträgt {{maxFileSize}}MB",
+    "dictFileTooBig": "Die Datei ist zu gross. Die maximale Dateigrösse beträgt {{maxFileSize}}MB",
     "dictInvalidFileType": "Eine Datei dieses Typs kann nicht hochgeladen werden",
     "dictResponseError": "Der Server hat ihre Anfrage mit Status {{statusCode}} abgelehnt",
     "dictCancelUpload": "Hochladen abbrechen",
