--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -84,6 +84,7 @@
   },
   "dropzone": {
     "dictDefaultMessage": "Drop files here to upload",
+    "dictDefaultMessageSingleFile": "Drop file here to upload",
     "dictFallbackMessage": "Your browser does not support drag'n'drop file uploads.",
     "dictFallbackText": "Please use the fallback form below to upload your files like in the olden days.",
     "dictFileTooBig": "File is too big ({{filesize}}MiB). Max filesize: {{maxFilesize}}MiB.",
