--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -36,8 +36,8 @@
   "editor": {
     "questionLeaveWithUnsavedChanges": "Not all changes are saved, close anyway?",
     "questionReallyEditBecauseActive": "This graphic is already activ. Changes will be applied in all articles. Do you really want to edit this graphic?",
-    "confirmProceedToEditor": "Yes, I want to edit this graphic",
-    "cancelProceedToEditor": "No, I do not want to edit this graphic",
+    "confirmProceedToEditor": "Yes, proceed to editor",
+    "cancelProceedToEditor": "No, cancel",
     "arrayEntryAdd": "add {{ arrayEntryLabel }}",
     "activatingEditorTakesTooLong": "It takes too long to load the editor, something is wrong.",
     "failedToSave": "Failed to save",
