Display text in save and activate/deactivate buttons

--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -50,6 +50,7 @@
     "publication": "Publication"
   },
   "item": {
+    "save": "save",
     "activate": "activate",
     "deactivate": "deactivate",
     "blueprint": "use as blueprint",
