--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -50,6 +50,7 @@
     "publication": "Publikation"
   },
   "item": {
+    "save": "speichern",
     "activate": "aktivieren",
     "deactivate": "deaktivieren",
     "blueprint": "als Vorlage benutzen",
