--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -77,7 +77,7 @@
     "searchLabel": "Search for a Q element"
   },
   "notifications": {
-    "previewBadRequest": "There is data missing to show the preview",
+    "previewError": "The graphic can not be displayed",
     "failedLoadingEditorConfig": "Failed to load editor configuration",
     "graphicNeedsATitle": "Graphic needs a title",
     "failedLoadingItems": "Failed loading graphics",
@@ -97,5 +97,10 @@
     "dictCancelUploadConfirmation": "Are you sure you want to cancel this upload?",
     "dictRemoveFile": "Remove file",
     "dictMaxFilesExceeded": "You cannot upload any more files."
+  },
+  "preview": {
+    "small": "Mobile",
+    "medium": "Content",
+    "large": "Full"
   }
 }
