--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -74,13 +74,16 @@
     "searchLabel": "Ein Q Element suchen"
   },
   "notifications": {
-    "previewError": "Die Grafik kann nicht angezeigt werden",
     "failedLoadingEditorConfig": "Die Editorkonfiguration konnte nicht geladen werden",
     "graphicNeedsATitle": "Grafik braucht einen Titel",
     "failedLoadingItems": "Grafiken konnten nicht geladen werden",
     "failedToLoadItem": "Die Grafik konnte nicht geladen werden.",
     "toolNotAvailable": "Dieses Tool steht nicht zur Verfügung",
-    "maxNumberOfFilesExceed": "Es können keine weiteren Dateien hochgeladen werden"
+    "maxNumberOfFilesExceed": "Es können keine weiteren Dateien hochgeladen werden",
+    "missingValue": {
+      "title": "Pflichtfeld ist leer",
+      "body": "Dieses Feld muss zwingend ausgefüllt sein."
+    }
   },
   "dropzone": {
     "dictDefaultMessage": "Anklicken oder Bilder hierhin ziehen, um sie hochzuladen",
@@ -99,6 +102,19 @@
     "medium": "Artikelbreite",
     "large": "Volle Breite",
     "title": "Vorschau",
-    "sizeLabel": "Vorschau für..."
+    "sizeLabel": "Vorschau für...",
+    "error": "Die Grafik kann nicht angezeigt werden",
+    "hint": {
+      "title": "Kontrolliere die Grafik in allen Grössen",
+      "body": "Die Grafik soll in allen Grössen gut lesbar sein."
+    },
+    "generalError": {
+      "title": "Es fehlen einige Daten um die Vorschau anzuzeigen",
+      "body": "Bitte alle Pflichtfelder oben ausfühlen."
+    },
+    "technicalError": {
+      "title": "Ein technisches Problem ist aufgetreten",
+      "body": "Bitte versuch die Grafik erneut zu speichern und Q neu zu laden."
+    }
   }
 }
