--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -43,8 +43,7 @@
     "failedToSave": "Failed to save",
     "conflictOnSave": "Failed to save due to a conflict",
     "failedToLoadEditorPart": "failed to load the editor for this element",
-    "noAutosaveBecauseActive": "Automatic saving is deactivated because the graphic is already active",
-    "transpose": "Switch rows and columns"
+    "noAutosaveBecauseActive": "Automatic saving is deactivated because the graphic is already active"
   },
   "metaEditor": {
     "annotations": "Annotations",
