Rename all validation related code to notification

--- a/client/locales/de/translation.json
+++ b/client/locales/de/translation.json
@@ -127,7 +127,7 @@
     },
     "technicalError": {
       "title": "Ein technisches Problem ist aufgetreten",
-      "body": "Bitte versuch die Grafik erneut zu speichern und Q neu zu laden."
+      "body": "Bitte versuch die Grafik erneut zu speichern und Q neu zu laden. {{errorMessage}}"
     }
   }
 }
