--- a/client/locales/en/translation.json
+++ b/client/locales/en/translation.json
@@ -89,15 +89,15 @@
     "table": {
       "emptyData": {
         "title": "Fill in your data",
-        "body": "Important: Die first row is reserved for headings."
+        "body": "Enter your data or copy directly from Excel. Select cell A1 and copy/paste using Ctrl/Cmd + V. Important: Each column needs a header."
       },
       "emptyFirstRow": {
         "title": "No column header defined",
         "body": "Please add a header for each column in the first row."
       },
       "tooManyColumns": {
-        "title": "Data contains many catergories",
-        "body": "Click on the «Switch rows and columns» button. Your graphic will probably look better."
+        "title": "Data contains many categories",
+        "body": "Click on the «Switch rows and columns» button. Your graphic will probably be more clear."
       }
     }
   },
